добалены конкретные AllowedHeaders и ExposedHeaders